# nav2_social_mpc_controller

./: CMakeLists.txt  README.md  critics.md  nav2_social_mpc_controller.xml  package.xml
include/nav2_social_mpc_controller/: critic_function.hpp  curvature_cost_function.hpp  distance_cost_function.hpp  obstacle_cost_function.hpp  obstacle_distance_interface.h  obstacle_distance_interface.hpp  optimizer.hpp  path_trajectorizer.hpp  people_interface.h  sfm.hpp  social_cost_function.hpp  social_mpc_controller.hpp  social_work_function.hpp  state_cache.hpp  update_state.hpp
include/nav2_social_mpc_controller/critics/: agent_angle_cost_function.hpp  critics.md  goal_align_cost_function.hpp  overall_social_cost_function.hpp  proxemics_cost_function.hpp  social_work_cost_function.hpp
include/nav2_social_mpc_controller/tools/: parameter_handler.hpp  type_definitions.hpp
include/nav2_social_mpc_controller/trajectorizers/: pure_pursuit.hpp
params/: params.yaml
src/: obstacle_distance_interface.cpp  optimizer.cpp  path_trajectorizer.cpp  people_interface.cpp  social_mpc_controller.cpp  test_path_trajectorizer.cpp
src/critics/: agent_angle_cost_function.cpp  goal_align_cost_function.cpp  overall_social_cost_function.cpp  social_work_cost_function.cpp
